--- a/A.htm
+++ b/A.htm
@@ -7,7 +7,7 @@ My first page
 </title>
 <style>
 body{
-    background-image:url("download.jpg");
+    background-image:url("images/download.jpg");
     background-repeat:no-repeat;
     
     background-size:100% 200%;
@@ -17,7 +17,7 @@ body{
 <link rel="stylesheet" type="text/css" href="mystyle.css">
 </head><body>
 <div id="header">
-<img src="illuminati-ambigram-mid.png" style="float:left;width:275px;height:150px">
+<img src="images/illuminati-ambigram-mid.png" style="float:left;width:275px;height:150px">
 <font size=110px color=green>ILLUMINATI</font>
 <h1>NATIONAL INSTITUTE OF TECHNOLOGY</h1>
 <h2><center>KURUKSHETRA</center></h2>
@@ -26,12 +26,12 @@ body{
 <div id="menu_nav">
 <ul id="bar">
 <li><a href="A.htm" class="class1">HOME</a></li>
-<li><a href="placestovisit.htm" class="class1">PLACES TO VISIT</a></li>
-<li><a href="rest.htm" class="class1">RESTAURANTS</a></li>
-<li><a href="traditions.htm" class="class1">TRADITIONS</a></li>
-<li><a href="nicknames.htm" class="class1">NICKNAMES</a></li>
-<li><a href="festivals.htm" class="class1">FESTIVALS</a></li>
-<li><a href="clubs&societies.htm" class="class1">CLUBS&SOCIETIES</a></li>
+<li><a href="places/placestovisit.htm" class="class1">PLACES TO VISIT</a></li>
+<li><a href="rest/rest.htm" class="class1">RESTAURANTS</a></li>
+<li><a href="traditions/traditions.htm" class="class1">TRADITIONS</a></li>
+<li><a href="nicknames/nicknames.htm" class="class1">NICKNAMES</a></li>
+<li><a href="festivals/festivals.htm" class="class1">FESTIVALS</a></li>
+<li><a href="clubs&societies/clubs&societies.htm" class="class1">CLUBS&SOCIETIES</a></li>
 </ul>
 </div>
 <div id="nav">
