--- a/A0.htm
+++ b/A0.htm
@@ -7,7 +7,7 @@ My first page
 
 <style>
  body{
-background-image:url("1.jpg");
+background-image:url("images/1.jpg");
 background-size:cover;
 }
 a:link {
