--- a/clubs&societies/EMR.htm
+++ b/clubs&societies/EMR.htm
@@ -11,7 +11,7 @@ background-color:rgba(0,0,0,0.6);
 a.class3:link,a.class3:visited{color:blue;
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body>
 <font color="red" size="120%">EMR(Embedded Systems and Robotics Club):
 </font><p style="font-family:chiller;color:white;font-size:30px;"> It is the Robotics and Embedded system society of the NIT-K. It is doing quite remarkably in the short tenure of its existence. Some of the robots have been quite exceptional with some unique achievements. Some of their significant projects include: gesture recoginition bot, maze solver and low-cost irrigation system.<br>
