--- a/clubs&societies/HLAD.htm
+++ b/clubs&societies/HLAD.htm
@@ -13,7 +13,7 @@ a.class3:link,a.class3:visited
 	color:blue;
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body>
 <font color="red" size="120%">HLAD(Hindi Literary and Debating Club):</font>
 <p style="font-family:chiller;color:white;font-size:30px;"> They are the desi brothers of ELAD. They do all the things I mentioned above just in Hindi. Their flagship event for the Talent Show is Talaash-e-kohinoor, a hindi counterpart of Mr and Miss Freshers, the flagship event of MAD at Talent Show.<br>
