--- a/clubs&societies/AOL.htm
+++ b/clubs&societies/AOL.htm
@@ -14,7 +14,7 @@ background-color:rgba(0,0,0,0.6);
 a.class3:link,a.class3:visited{color:blue;
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body>
 <font color="red" size="120%">Art of Living-</font>
 <p style="color:white;font-size:30px;font-family:chiller;"> It is a campus extension of the Art of Living foundation of Shri Shri Ravi Shankar. It is not a full-fledged full time society but is only concerned with the conduction of a workshop called Yes+. It happens in both the semesters.<br>
