--- a/clubs&societies/FA.htm
+++ b/clubs&societies/FA.htm
@@ -17,7 +17,7 @@ font-size:30px;
 </head><body>
 <font color=red size="120%">FINE ARTS:</font>
 <p style="font-size:30px;font-family:chiller;color:white;">Perhaps the most hard working and talented club of the college, the portrait adorning the wall in front of jubilee hall or the super Mario you see in your way to your classes or the absolutely stunning artwork on the walls of Moxie, they don’t require a canvas to paint, just the brushes. Their flagship event for the Confluence is Art-a Thon which even if your art is pathetic you would enjoy.<BR>
-The <a href="starnyt1.jpg" target="_self">backdrop poster</a> of the OAT which oversees all the major festivities of the Confluence is painted by hand by the team and takes whole one month to complete. All the decoration work is spearheaded by the Fine Arts club during and before the confluence.
+The <a href="../images/starnyt1.jpg" target="_self">backdrop poster</a> of the OAT which oversees all the major festivities of the Confluence is painted by hand by the team and takes whole one month to complete. All the decoration work is spearheaded by the Fine Arts club during and before the confluence.
 <br>
 For more information, visit there college page @ <a href="http://nitkkr.ac.in/pagesUI/homePage.jsf?pageEvent=239&page=content&language=2" target="_new">FINE ARTS,NIT Kurukshetra.</a>
 </p>
