--- a/clubs&societies/MAD.htm
+++ b/clubs&societies/MAD.htm
@@ -9,7 +9,7 @@ body{
 background-color:rgba(0,0,0,0.6);
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body>
 <font color="red" size="120%">MAD(Music And Dramatics Club)-</font>
 <p style="font-family:chiller;color:white;font-size:30px;"> The biggest rival to SAC in terms of popularity, MAD oversees the music, dramatics and dance scene of the college. It holds its flagship event of GROOVE ARMADA, which is a group dance event which has scene participation of pretty decent colleges over the year with colleges of Chandigarh and Delhi being the most receptive to its lure. But like most events of the fest, this too has been dominated traditionally by the two dance groups of the college LSD and SUC, irrespective of their or other’s performance.<br>
