--- a/clubs&societies/PHOTOG.htm
+++ b/clubs&societies/PHOTOG.htm
@@ -9,7 +9,7 @@ body{
 background-color:rgba(0,0,0,0.6);
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body>
 <font color="red" size="120%">Photog(Photography Club):</font>
 <p style="font-family:chiller;color:white;font-size:30px;"> As the name suggests, these are the clickers of our college. With DSLR hanging around their necks, you can find them at each and every event of the college, whether they click your photograph or not is an entirely different point all together. They also conduct several events during the confluence with both online submission and live events. Apart from the so many treasure hunts you will have during all the fest, they have a more refreshing Scavenger Hunt for you.<BR>
