--- a/clubs&societies/clubs&societies.htm
+++ b/clubs&societies/clubs&societies.htm
@@ -17,38 +17,34 @@ body
 animation:example;
 animation-iteration-count:infinite;
 animation-direction:alternate;
-animation-duration:6s;
+animation-duration:4s;
 }
 @keyframes example{
-0% {background-image:url(SAC.jpg);background-size: cover;}
-17% {background-image: url(MAD.jpg);background-size: cover;}
-34% {background-image:url(PHOTOG.jpg);background-size: cover;}
-50% {background-image:url(FA.jpg);background-size: cover;}
-67% {background-image:url(ELAD.jpg);background-size: cover;}
-84% {background-image:url(HLAD.jpg);background-size: cover;}
-100% {background-image:url(SAC.jpg);background-size: cover;}
+0% {background-image:url(../images/SAC.jpg);background-size: cover;}
+25% {background-image: url(../images/MAD.jpg);background-size: cover;}
+50% {background-image:url(../images/PHOTOG.jpg);background-size: cover;}
+75% {background-image:url(../images/ELAD.jpg);background-size: cover;}
+100% {background-image:url(../images/SAC.jpg);background-size: cover;}
 }
 </style>
-<link rel="stylesheet" type="text/css" href="mystyle.css">
+<link rel="stylesheet" type="text/css" href="../mystyle.css">
 </head><body bgcolor="orange">
 <div style="
-background-image:url(download.jpg);background-size:cover;overflow:hidden;">
+background-image:url(../images/download.jpg);background-size:cover;overflow:hidden;">
 <div id="header">
-<img src="illuminati-ambigram-mid.png" style="float:left;width:175px;height:175px">
+<img src="../images/illuminati-ambigram-mid.png" style="float:left;width:175px;height:175px">
 <font size=110px color=green>ILLUMINATI</font>
 <h1>NATIONAL INSTITUTE OF TECHNOLOGY</h1>
 <h2><center>KURUKSHETRA</center></h2>
 </div>
 <div id="menu_nav">
 <ul id="bar">
-<li><a href="A.htm" class="class1">HOME</a></li>
-<li><a href="college.htm" class="class1">COLLEGE</a></li>
-<li><a href="departments.htm" class="class1">DEPARTMENTS</a></li>
-<li><a href="placestovisit.htm" class="class1">PLACES TO VISIT</a></li>
-<li><a href="rest.htm" class="class1">RESTAURANTS</a></li>
-<li><a href="traditions.htm" class="class1">TRADITIONS</a></li>
-<li><a href="nicknames.htm" class="class1">NICKNAMES</a></li>
-<li><a href="festivals.htm" class="class1">FESTIVALS</a></li>
+<li><a href="../A.htm" class="class1">HOME</a></li>
+<li><a href="../places/placestovisit.htm" class="class1">PLACES TO VISIT</a></li>
+<li><a href="../rest/rest.htm" class="class1">RESTAURANTS</a></li>
+<li><a href="../traditions/traditions.htm" class="class1">TRADITIONS</a></li>
+<li><a href="../nicknames/nicknames.htm" class="class1">NICKNAMES</a></li>
+<li><a href="../festivals/festivals.htm" class="class1">FESTIVALS</a></li>
 <li><a href="clubs&societies.htm" class="class1">CLUBS&SOCIETIES</a></li>
 </ul>
 </div>
@@ -60,7 +56,7 @@ The foremost thing is what are the clubs and societies. Clubs are the groups who
 </p></div>
 </div>
 <div style="
-background-image:url(download.jpg);background-size:cover;overflow:hidden;">
+background-image:url(../images/download.jpg);background-size:cover;overflow:hidden;">
 <div id="societies">
 <h1>CLUBS</h1>
 <p>The most informative and enriching experience of your first year would be provided by your clubs.Its a phenomenol opportunity for you to gain organizational experience and to interact with students of your own year and your seniors. Here is a guide to all the clubs of the campus and choose the correct one for you based on your intrests.</p>
@@ -84,7 +80,7 @@ So, the inductions start just after the Talent Show. So participate heavily in t
 </div>
 </div>
 <div style="
-background-image:url(download.jpg);background-size:cover;overflow:hidden;">
+background-image:url(../images/download.jpg);background-size:cover;overflow:hidden;">
 <div id="societies">
 <h1>SOCIETIES</h1>
 <p>SPOILER: There is nothing technical amongst majority of the societies, if you don’t consider selling t-shirts and marketing workshop a skill.
@@ -107,7 +103,7 @@ So yes apart from some societies like EMR and SAE most of the others have no tec
 <iframe style="margin-left:25%;margin-bottom:5%;margin-top:0px;width:70%;height:500px;" src="SAE.htm" name="iframe2"></iframe>
 </div>
 <div style="
-background-image:url(download.jpg);background-size:cover;background-size:cover;">
+background-image:url(../images/download.jpg);background-size:cover;background-size:cover;">
 <div id="societies">
 <h1>REST</h1>
 <p>Well these maybe the last but aren’t least in any respect. I have put these here as they don’t classify in either of the above two categories. These are either unofficial societies, literary groups or dance groups. These are exception to the one club one society rule though the clash of duties is inevitable.
