--- a/nicknames/nicknames.htm
+++ b/nicknames/nicknames.htm
@@ -28,7 +28,7 @@ body{
 <li><a href="../rest/rest.htm" class="class1">RESTAURANTS</a></li>
 <li><a href="../traditions/traditions.htm" class="class1">TRADITIONS</a></li>
 <li><a href="nicknames.htm" class="class1">NICKNAMES</a></li>
-<li><a href="..festivals/festivals.htm" class="class1">FESTIVALS</a></li>
+<li><a href="../festivals/festivals.htm" class="class1">FESTIVALS</a></li>
 <li><a href="../clubs&societies/clubs&societies.htm" class="class1">CLUBS&SOCIETIES</a></li>
 </ul>
 </div>
